src/ru/progwards/task2/error
Ваш ответ на задание H2 Домашнее задание курса 1219 Java, базовый уровень не прошел автоматическую проверку.

В Вашем классе обнаружены следующие проблемы:

H2 Домашнее задание:
Ошибка 1: Отсутствует публичный метод calculation() в классе ru.progwards.java1.lessons.task2.Task2
Ошибка 2: Отсутствует публичный метод multiplication(int,int) в классе ru.progwards.java1.lessons.task2.Task2
Ошибка 3: Отсутствует публичный метод addition(int,int) в классе ru.progwards.java1.lessons.task2.Task2
Ошибка 4: Отсутствует публичный метод subtraction(int,int) в классе ru.progwards.java1.lessons.task2.Task2
Ошибка 5: Отсутствует публичный метод main() в классе ru.progwards.java1.lessons.task2.Task2
У Вас есть возможность сделать работу над ошибками. Исправьте все, что считаете нужным и отправьте Ваш ответ на проверку снова.

------------------------------------------------------------------------------------------------------------------------------------
Ваш класс вызвал следующие ошибки компиляции:

_temp_for_simple_/2632e0c2-9e33-4a9c-9dfe-936c8ca9e890/simple/ru/progwards/java1/lessons/task2/Task2.java:81: error: unclosed string literal
        System.out.println(" a = " + a + "
                                         ^
_temp_for_simple_/2632e0c2-9e33-4a9c-9dfe-936c8ca9e890/simple/ru/progwards/java1/lessons/task2/Task2.java:82: error: unclosed string literal
" + " b = " + b);
          ^
2 errors
У Вас есть возможность сделать работу над ошибками. Исправьте все, что считаете нужным и отправьте Ваш ответ на проверку снова.

--------------------------------------------------------------------------------------------------------------------------------------
Ваш класс вызвал следующие ошибки компиляции:

_temp_for_simple_/a3cae0b2-f7e5-4997-b31b-5f36a633017e/simple/ru/progwards/java1/lessons/task2/Task2.java:82: error: not a statement
" + " b = " + b);
^
_temp_for_simple_/a3cae0b2-f7e5-4997-b31b-5f36a633017e/simple/ru/progwards/java1/lessons/task2/Task2.java:82: error: ';' expected
" + " b = " + b);
     ^
_temp_for_simple_/a3cae0b2-f7e5-4997-b31b-5f36a633017e/simple/ru/progwards/java1/lessons/task2/Task2.java:82: error: unclosed string literal
" + " b = " + b);
          ^
3 errors
У Вас есть возможность сделать работу над ошибками. Исправьте все, что считаете нужным и отправьте Ваш ответ на проверку снова.